tools/maintenance/ingress-kube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintenance-kube
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - maintenance.kube.stelmashchuk.dev
      secretName: maintenance-kube-tls
  rules:
    - host: maintenance.kube.stelmashchuk.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance
                port:
                  number: 80
